plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '25.0.2'
    modules = [ 'javafx.controls', 'javafx.graphics' ]
}

application {
    mainClass = 'parcelpanic.App'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

tasks.named('test') {
    useJUnitPlatform()
}
